# asts

./: .gitignore  Cargo.toml  Makefile  README.md  dump_bam.py  read_sbr_bam.py
benches/: benchmark.rs
scripts/: low_iy.py
src/: cli.rs  lib.rs  mapping2record.rs  params.rs  read_info.rs  reporter.rs  sbr_and_cs_to_cs.rs  sbr_and_ref_to_cs.rs  utils.rs
test/: bam_diff.py  cigar_identity.py
test_data/: query.fa  ref.fa  smc.part.bam
