[package]
name = "asts"
version = "0.4.0"
edition = "2021"
description = "asts"
license = "MIT"
repository ="https://github.com/keithyin/asts"

[dependencies]
clap = {version="4.4", features=["derive"]}
rust-htslib = "0.47.0"
tracing = "0.1.40"
tracing-subscriber = {version="0.3.18", features=["json", "env-filter", "fmt", "time", "local-time"]}
time = "0.3.34"
anyhow = "1.0.82"
indicatif= {version="0.17.7"}
minimap2="0.1.20+minimap2.2.28"
num_cpus="1.16"
crossbeam="0.8"
mm2 = "0.10"
gskits = "0.8"
