[package]
name = "asts"
version = "0.13.0"
edition = "2021"
description = "asts"
license = "MIT"
repository ="https://github.com/keithyin/asts"
exclude = [
    "test_data/*"
]

[dependencies]
clap = {version="4.4", features=["derive"]}
rust-htslib = "0.49"
tracing = "0.1.40"
tracing-subscriber = {version="0.3.18", features=["json", "env-filter", "fmt", "time", "local-time"]}
tracing-appender = "0.2.3"
time = "0.3.34"
anyhow = "1.0.82"
indicatif= {version="0.17.7"}
minimap2="=0.1.23"
num_cpus="1.16"
crossbeam="0.8"
mm2 = "0.23.1"
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
lazy_static = "1.5.0"
gskits="0.15.12"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
